--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Eu te amo 💕</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Feliz Dia dos Namorados 💖</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="stars"></div>
   <div class="container">
-    <h1>Feliz Dia dos Namorados 💖</h1>
-    <p>Você é a flor mais linda do meu jardim 🌸</p>
-
-    <svg width="200" height="200" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-      <circle cx="32" cy="32" r="6" fill="#ff69b4"/>
-      <circle cx="32" cy="12" r="6" fill="#ffa6c9"/>
-      <circle cx="32" cy="52" r="6" fill="#ffa6c9"/>
-      <circle cx="12" cy="32" r="6" fill="#ffa6c9"/>
-      <circle cx="52" cy="32" r="6" fill="#ffa6c9"/>
-      <circle cx="19" cy="19" r="6" fill="#ffa6c9"/>
-      <circle cx="45" cy="45" r="6" fill="#ffa6c9"/>
-      <circle cx="19" cy="45" r="6" fill="#ffa6c9"/>
-      <circle cx="45" cy="19" r="6" fill="#ffa6c9"/>
-    </svg>
-
-    <p class="assinatura">Com amor, [Seu Nome] 💌</p>
+    <h1>Você é a flor mais linda do meu jardim 🌸</h1>
+    <p>Feliz Dia dos Namorados! 💌</p>
+    <div class="flower">
+      <!-- SVG simplificado inspirado na imagem -->
+      <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+        <line x1="100" y1="200" x2="100" y2="100" stroke="#8b5a2b" stroke-width="6" />
+        <circle cx="100" cy="90" r="15" fill="#ff69b4"/>
+        <circle cx="80" cy="85" r="10" fill="#ffa6c9"/>
+        <circle cx="120" cy="85" r="10" fill="#ffa6c9"/>
+        <circle cx="90" cy="70" r="10" fill="#ffa6c9"/>
+        <circle cx="110" cy="70" r="10" fill="#ffa6c9"/>
+        <!-- folhas -->
+        <ellipse cx="90" cy="140" rx="15" ry="8" fill="#228b22"/>
+        <ellipse cx="110" cy="150" rx="15" ry="8" fill="#228b22"/>
+      </svg>
+    </div>
+    <p class="assinatura">Com amor, [Seu Nome] 💖</p>
   </div>
+
+  <!-- Vaga-lumes -->
+  <div class="firefly" style="top: 90%; left: 20%; animation-delay: 0s;"></div>
+  <div class="firefly" style="top: 80%; left: 40%; animation-delay: 2s;"></div>
+  <div class="firefly" style="top: 85%; left: 60%; animation-delay: 4s;"></div>
+  <div class="firefly" style="top: 75%; left: 80%; animation-delay: 6s;"></div>
+  <div class="firefly" style="top: 95%; left: 50%; animation-delay: 8s;"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
