--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./src/style/style.css">
-        <link rel="shortcut icon" href="./src/icons8-flower-96.png" type="image/x-icon">
+        <link rel="stylesheet" href="src/CSS/Style.css">
+        <script src="src/JS/script.js"></script>
+        <img src="src/petalas.png" alt="petalas">
         <title>Flores</title>
     </head>
     <body class="container">
