--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Surpresa ❤️</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/CSS/Style2.css">
+    <script src="src/JS/script2.js" defer></script>
 </head>
 <body>
     <h1>Te amo! ❤️🌹</h1>
