--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Jogo da Memória ❤️</title>
-    <link rel="stylesheet" href="src/css/pagina2.css">
+    <link rel="stylesheet" href="src/CSS/Style2.css">
+    <script src="src/JS/script2.js"></script>
+
 </head>
 <body>
     <h1>Jogo da Memória ❤️</h1>
@@ -15,11 +17,10 @@
 
     <div id="finalMessage" class="hidden">
         <h2>Parabéns! Você completou o jogo! 🎉</h2>
-        <a href="pagina3.html"><button>Ir para a próxima surpresa ❤️</button></a>
+        <a href="page3.html"><button>Ir para a próxima surpresa ❤️</button></a>
     </div>
 
-    <audio id="musica" src="src/audio/musica.mp3" autoplay loop></audio>
 
-    <script src="src/js/pagina2.js" defer></script>
+    <script src="src/JS/script2.js" defer></script>
 </body>
 </html>
