--- a/page2.html
+++ b/page2.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <title>Jogo da Memória ❤️</title>
     <link rel="stylesheet" href="src/CSS/Style2.css">
-    <script src="src/JS/script2.js"></script>
 
 </head>
 <body>
+    <div class="stars"></div>
+    <div class="stars2"></div>
+    <div class="stars3"></div>
+
     <h1>Jogo da Memória ❤️</h1>
     <p>Encontre todos os pares para revelar a surpresa!</p>
 
