--- a/page3.html
+++ b/page3.html
@@ -11,6 +11,6 @@
         <button id="restartBtn" class="hidden">Recomeçar ❤️</button>
     </div>
 
-    <script src="src/page3.js"></script>
+    <script src="src/JS/script3.js"></script>
 </body>
 </html>
