--- a/page3.html
+++ b/page3.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Minha Surpresa Final</title>
-    <link rel="stylesheet" href="src/page3.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Escrito nas Estrelas</title>
+  <link rel="stylesheet" href="/src/CSS/Style3.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <div class="container">
-        <p id="typewriter"></p>
-        <button id="restartBtn" class="hidden">Recomeçar ❤️</button>
-    </div>
+  <div class="stars"></div>
+  <div class="twinkling"></div>
+  <div class="content">
+    <p id="typewriter"></p>
+    <button id="restartBtn" style="display:none;" onclick="window.location.href='index.html'">Rever tudo de novo</button>
+  </div>
 
-    <script src="src/JS/script3.js"></script>
+  <script src="/src/JS/script3.js"></script>
 </body>
 </html>
