--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Escrito nas Estrelas</title>
-  <link rel="stylesheet" href="page3.css" />
+  <link rel="stylesheet" href="/src/CSS/Style3.css" />
   <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -17,6 +17,6 @@
     <button id="restartBtn" style="display:none;" onclick="window.location.href='index.html'">Rever tudo de novo</button>
   </div>
 
-  <script src="page3.js"></script>
+  <script src="/src/JS/script3.js"></script>
 </body>
 </html>
