--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Escrito nas Estrelas</title>
-  <link rel="stylesheet" href="/src/CSS/Style3.css" />
+  <link rel="stylesheet" href="src/CSS/Style3.css" />
   <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -21,12 +21,12 @@
 
     <div id="videoContainer" style="display: none;">
       <video id="romanticVideo" controls autoplay>
-        <source src="/src/video/video.mp4" type="video/mp4" />
+        <source src="src/video/video.mp4" type="video/mp4" />
         Seu navegador não suporta vídeo em HTML5.
       </video>
     </div>
   </div>
 
-  <script src="/src/JS/script3.js"></script>
+  <script src="src/JS/script3.js"></script>
 </body>
 </html>
