--- a/page3.html
+++ b/page3.html
@@ -15,6 +15,14 @@
   <div class="content">
     <p id="typewriter"></p>
 
+    <div id="videoContainer" style="display: none;">
+      <video id="romanticVideo" controls autoplay>
+        <source src="src/video/video.mp4" type="video/mp4" />
+        Seu navegador não suporta vídeo em HTML5.
+      </video>
+    </div>
+  </div>
+
   <script src="src/JS/script3.js"></script>
 </body>
 </html>
