--- a/page3.html
+++ b/page3.html
@@ -15,6 +15,10 @@
   <div class="content">
     <p id="typewriter"></p>
 
+    <div id="playButtonContainer" style="display: none;">
+      <button id="playVideoBtn">Iniciar filme</button>
+    </div>
+
     <div id="videoContainer" style="display: none;">
       <video id="romanticVideo" controls autoplay>
         <source src="src/video/video.mp4" type="video/mp4" />
