--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
     <div class="memory-game"></div>
 
     <div id="finalMessage" class="hidden">
-        <h2>Parabéns! Você completou o jogo! 🎉</h2>
+        <h2>Parabéns meu amor! Você encontrou partes da nossa historia!</h2>
         <a href="page3.html"><button>Ir para a próxima surpresa ❤️</button></a>
     </div>
 
